--- a/assets/css/admin/general.css
+++ b/assets/css/admin/general.css
@@ -107,7 +107,7 @@ body[class*="woostify-welcome"] #wpcontent, body[class*="woostify-options_page"]
 
 /* Woostify options page Navigation */
 .woostify-welcome-container {
-  max-width: 930px;
+  max-width: 1140px;
   margin: 0 auto;
   padding: 0 15px;
 }
@@ -119,6 +119,7 @@ body[class*="woostify-welcome"] #wpcontent, body[class*="woostify-options_page"]
 .woostify-welcome-nav {
   background-color: #fff;
   box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.1);
+  padding: 1.2em 0;
 }
 
 @media (max-width: 719px) {
@@ -170,8 +171,9 @@ body[class*="woostify-welcome"] #wpcontent, body[class*="woostify-options_page"]
 .woostify-welcome-nav .woostify-welcome-theme-version {
   background-color: #e5e5e5;
   border-radius: 2px;
-  font-size: 0.65em;
-  padding: 2px 5px;
+  padding: 3px 8px;
+  font-size: 1em;
+  color: #001099;
 }
 
 .woostify-welcome-nav .woostify-welcome-nav__version {
