--- a/assets/css/admin/welcome.scss
+++ b/assets/css/admin/welcome.scss
@@ -27,24 +27,134 @@
 			width: 100%;
 
 			@media ( min-width: 1140px ) {
-				max-width: 600px;
 				margin-right: 20px;
 			}
 		}
 
 		.woostify-enhance-sidebar {
 			width: 100%;
+			position: sticky;
+			position: -webkit-sticky;
+			top: 0;
+			margin-top: 42px;
 
 			@media ( min-width: 1140px ) {
-				max-width: 350px;
+				max-width: 300px;
+			}
+		}
+
+		.woostify-welcome-settings-section-tab {
+
+			.woostify-setting-tab-head {
+				display: flex;
+				align-items: stretch;
+				flex-direction: row;
+
+				.tab-head-button {
+					padding: 12px 20px;
+					display: inline-block;
+					font-weight: 500;
+					color: #3c434a;
+
+					&.active {
+						background: #fff;
+						border-radius: 4px 4px 0 0;
+						color: #2271b1;
+					}
+				}
+			}
+
+			.woostify-setting-tab-content-wrapper {
+				.woostify-setting-tab-content {
+					background: #fff;
+					padding: 20px;
+					border-radius: 4px;
+
+					&:first-child {
+						border-top-left-radius: 0;
+					}
+
+					&:not(.active) {
+						display: none;
+					}
+
+					.section-header {
+						margin: 1em 0;
+
+						&:first-child {
+							margin-top: 0;
+						}
+					}
+
+					&[data-tab="starter-templates"] {
+						text-align: center;
+						p {
+							margin: 0 0 5px 0;
+						}
+
+						img {
+							margin: 10px 0;
+						}
+
+						h2 {
+							margin-top: 20px;
+							margin-bottom: 1.5em;
+							text-align: center;
+							color: #001099;
+							font-size: 1.6em;
+						}
+					}
+				}
+			}
+		}
+
+		.pro-featured-list {
+			margin-top: 2em;
+		}
+
+		.woostify-grid-box {
+			display: grid;
+			grid-template-columns: repeat(3, 1fr);
+			grid-gap: 20px;
+
+			.box-item {
+				border: 1px solid #E2E8F0;
+				padding: 20px;
+				border-radius: 4px;
+				display: -webkit-flex;
+				display: flex;
+				-webkit-flex-flow: column nowrap;
+				flex-flow: column nowrap;
+				align-items: center;
+				text-align: center;
+
+				&__icon {
+					color: #2271b1;
+				}
+				&__name {
+					font-size: 1em;
+					margin: 1em 0;
+				}
+				&__link {
+					margin-top: .5em;
+					color: #3c434a;
+					&:hover, &:focus, &:active {
+						color: #2271b1;
+					}
+				}
+
+				&--disabled {
+					background: #fbfdff;
+				}
 			}
 		}
 
 		.woostify-enhance__column {
-			border: 1px solid #d8e2e9;
 			width: 100%;
 			background: #fff;
 			margin-bottom: 10px;
+			border-radius: 4px;
+			overflow: hidden;
 
 			@media ( min-width: 720px ) {
 				margin-bottom: 20px;
@@ -92,8 +202,7 @@
 				font-size: 1.1em;
 				font-weight: 600;
 				color: #383838;
-				border-bottom: 1px solid #d8e2e9;
-				padding: 1em 1.5em;
+				padding: 1em 1.5em 0;
 				margin: 0;
 			}
 
