--- a/assets/css/admin/welcome.scss
+++ b/assets/css/admin/welcome.scss
@@ -127,24 +127,58 @@
 				flex-flow: column nowrap;
 				align-items: center;
 				text-align: center;
+				position: relative;
 
 				&__icon {
 					color: #2271b1;
 				}
+
 				&__name {
 					font-size: 1em;
 					margin: 1em 0;
 				}
+
+				&__desc {
+					margin-top: 0;
+					font-style: italic;
+				}
+
 				&__link {
-					margin-top: .5em;
+					margin-top: 0.5em;
 					color: #3c434a;
+
 					&:hover, &:focus, &:active {
 						color: #2271b1;
+						border-color: rgba(190,196,203,0.7);
+					}
+				}
+
+				&:not(.box-item--disabled) {
+					&.box-item__link {
+						border-radius: 3px;
+						padding: 5px 12px;
+						background: #fff;
+						border: 1px solid #e2e6eb;
+						box-shadow: 0 1px 3px rgba(0, 0, 0, 0.04);
 					}
 				}
 
 				&--disabled {
 					background: #fbfdff;
+
+					.box-item__icon {
+						position: absolute;
+						top: 5px;
+						right: 5px;
+						color: #ccc;
+						font-size: 14px;
+						width: 14px;
+						height: 14px;
+					}
+
+					.box-item__name {
+						margin-top: 0;
+					}
 				}
 			}
 		}
