Change admin notice postition in welcome page

--- a/assets/css/admin/welcome.css
+++ b/assets/css/admin/welcome.css
@@ -5,11 +5,13 @@
 
 .woostify-options-wrap .woostify-enhance {
   margin-top: 4em;
+  max-width: 1140px;
+  padding: 0 15px;
 }
 
 @media (min-width: 1140px) {
   .woostify-options-wrap .woostify-enhance {
-    margin: 4em 0px;
+    margin: 4em auto;
   }
 }
 
@@ -20,6 +22,8 @@
 }
 
 .woostify-options-wrap .woostify-enhance .woostify-welcome-container {
+  width: 100%;
+  padding: 0;
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
@@ -127,6 +131,12 @@
   grid-gap: 20px;
 }
 
+@media (max-width: 600px) {
+  .woostify-options-wrap .woostify-enhance .woostify-grid-box {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
 .woostify-options-wrap .woostify-enhance .woostify-grid-box .box-item {
   border: 1px solid #E2E8F0;
   padding: 20px;
@@ -157,19 +167,16 @@
 .woostify-options-wrap .woostify-enhance .woostify-grid-box .box-item__link {
   margin-top: 0.5em;
   color: #3c434a;
-}
-
-.woostify-options-wrap .woostify-enhance .woostify-grid-box .box-item__link:hover, .woostify-options-wrap .woostify-enhance .woostify-grid-box .box-item__link:focus, .woostify-options-wrap .woostify-enhance .woostify-grid-box .box-item__link:active {
-  color: #2271b1;
-  border-color: rgba(190, 196, 203, 0.7);
-}
-
-.woostify-options-wrap .woostify-enhance .woostify-grid-box .box-item:not(.box-item--disabled) .box-item__link {
   border-radius: 3px;
   padding: 5px 12px;
   background: #fff;
   border: 1px solid #e2e6eb;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.04);
+}
+
+.woostify-options-wrap .woostify-enhance .woostify-grid-box .box-item__link:hover, .woostify-options-wrap .woostify-enhance .woostify-grid-box .box-item__link:focus, .woostify-options-wrap .woostify-enhance .woostify-grid-box .box-item__link:active {
+  color: #2271b1;
+  border-color: rgba(190, 196, 203, 0.7);
 }
 
 .woostify-options-wrap .woostify-enhance .woostify-grid-box .box-item--disabled {
