Update some style

--- a/assets/css/admin/welcome.css
+++ b/assets/css/admin/welcome.css
@@ -203,6 +203,8 @@
   margin-bottom: 10px;
   border-radius: 4px;
   overflow: hidden;
+  padding: 1.5em;
+  box-sizing: border-box;
 }
 
 @media (min-width: 720px) {
@@ -247,10 +249,9 @@
 }
 
 .woostify-options-wrap .woostify-enhance .woostify-enhance__column h3 {
-  font-size: 1.1em;
+  font-size: 1.3em;
   font-weight: 600;
   color: #383838;
-  padding: 1em 1.5em 0;
   margin: 0;
 }
 
@@ -288,17 +289,11 @@
 }
 
 .woostify-options-wrap .wf-quick-setting-section {
-  margin: 1em 0;
-  padding: 0 1.5em;
+  margin: 1.3em 0 0;
 }
 
 .woostify-options-wrap .pro-featured-list {
   padding-bottom: 0 !important;
-}
-
-.woostify-options-wrap .pro-featured-list .wf-quick-setting-section {
-  margin: 0;
-  padding: 0;
 }
 
 .woostify-options-wrap .pro-featured-list .pro-featured-item {
