Update style for checkbox field

--- a/assets/css/sass/woocommerce/checkout-page.scss
+++ b/assets/css/sass/woocommerce/checkout-page.scss
@@ -1185,7 +1185,7 @@
 	.form-row {
 		position: relative;
 
-		label {
+		label:not(.checkbox) {
 			position: absolute;
 			top: 50%;
 			left: 12px;
