--- a/style.css
+++ b/style.css
@@ -10454,7 +10454,7 @@ body:not(.yith-wcms-pro) .processing:not(.um-woo-status):after {
   position: relative;
 }
 
-.checkout-layout-3:not(.woobuilder-active) .form-row label {
+.checkout-layout-3:not(.woobuilder-active) .form-row label:not(.checkbox) {
   position: absolute;
   top: 50%;
   left: 12px;
