Update some style

--- a/assets/css/sass/woocommerce/checkout-page.scss
+++ b/assets/css/sass/woocommerce/checkout-page.scss
@@ -1363,7 +1363,7 @@
 			-moz-flex-direction: row;
 			-ms-flex-direction: row;
 			flex-direction: row;
-			position: absolute;
+			position: fixed;
 			top: 0;
 			height: 100%;
 			bottom: 0;
