--- a/assets/css/rtl/woocommerce/general.scss
+++ b/assets/css/rtl/woocommerce/general.scss
@@ -132,4 +132,15 @@
 	.woocommerce-cart-form__contents:not(.elementor-menu-cart__products) [name="coupon_code"] {
 		margin-right: 0;
 	}
+
+	.mini-cart-product-infor {
+		.mini-cart-product-qty[data-qty="plus"] {
+			border: 1px solid #ccc;
+			border-right: 0;
+		}
+		.mini-cart-product-qty[data-qty="minus"] {
+			border: 1px solid #ccc;
+			border-left: 0;
+		}
+	}
 }
