Fixed product thumbnails style in vertical layout

--- a/assets/css/rtl/woocommerce/product-single.scss
+++ b/assets/css/rtl/woocommerce/product-single.scss
@@ -1,4 +1,7 @@
 .rtl {
+	.product-thumbnail-images .thumbnail-item {
+		margin: 0 0 10px 10px;
+	}
 	.woostify-product-navigation {
 		.product-nav-item-text {
 			display: flex;
