add pointer none for disabled button

--- a/assets/css/sass/woocommerce/product-page.scss
+++ b/assets/css/sass/woocommerce/product-page.scss
@@ -826,7 +826,10 @@
 		vertical-align: top;
 		padding-top: 0;
 		padding-bottom: 0;
-		pointer-events: auto;
+
+		&:not(.disabled) {
+			pointer-events: auto;
+		}
 
 		@media (max-width: 600px) {
 			min-width: auto;
