--- a/style.css
+++ b/style.css
@@ -6181,6 +6181,7 @@ body:not(.yith-wcms-pro) .processing:not(.um-woo-status):after {
   display: flex;
   align-items: center;
   flex-wrap: wrap;
+  width: 100%;
 }
 
 .woocommerce-info a {
