--- a/style.css
+++ b/style.css
@@ -7705,7 +7705,7 @@ body:not(.yith-wcms-pro) .processing:not(.um-woo-status):after {
   background: #fff;
 }
 
-.product-group-btns .photoswipe-toggle-button .woostify-svg-icon {
+.product-group-btns .woostify-lightbox-button .woostify-svg-icon, .product-group-btns .photoswipe-toggle-button .woostify-svg-icon {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -7718,15 +7718,10 @@ body:not(.yith-wcms-pro) .processing:not(.um-woo-status):after {
   height: 16px;
 }
 
-.product-group-btns .woostify-lightbox-button {
-  font-size: 20px;
-}
-
-.product-group-btns .woostify-lightbox-button:before {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+.product-group-btns .woostify-lightbox-button svg {
+  display: block;
+  width: 20px;
+  height: 20px;
 }
 
 .woocommerce-product-rating {
