--- a/assets/css/sass/woocommerce/woocommerce.scss
+++ b/assets/css/sass/woocommerce/woocommerce.scss
@@ -418,6 +418,43 @@ body{
 	}
 }
 
+.woocommerce-info,
+.woocommerce-error,
+.woocommerce-message {
+	a.button {
+		@media (max-width: 600px) {
+			display: none;
+		}
+	}
+}
+.woocommerce-info,
+.woocommerce-error {
+	position: relative;
+	padding: 1em 2em;
+	color: #fff;
+	margin-bottom: 20px;
+
+	a {
+		&:hover {
+			color: #fff;
+		}
+	}
+}
+
+.woocommerce-info,
+.woocommerce-message {
+	a {
+		margin-left: auto;
+	}
+
+	&:before {
+		font-family: 'WooCommerce';
+		content: "\e028";
+		color: #fff;
+	    margin-right: 10px;
+	}
+}
+
 .woocommerce-message {
 	padding: 15px;
 	color: #fff;
@@ -425,8 +462,16 @@ body{
 	margin-bottom: 20px;
 	display: flex;
 	align-items: center;
+	position: relative;
+	padding: 1em 2em;
 
-	a {
+	clear: both;
+
+	&:before {
+		content: "\e015";
+	}
+
+	a.button {
 		order: 2;
 		color: #fff;
 		line-height: 1;
@@ -437,72 +482,27 @@ body{
 		&:hover {
 			color: #fff;
 		}
-	}
-}
-.woocommerce-info,
-.woocommerce-error {
-	position: relative;
-	padding: 1em 2em 1em 3.5em;
-	color: #fff;
-	margin-bottom: 20px;
 
-	a {
-		&:hover {
-			color: #fff;
+		@media (max-width: 600px) {
+			display: none;
 		}
 	}
 }
-.woocommerce-message {
-	position: relative;
-	padding: 1em 2em 1em 3.5em;
-}
-
-.woocommerce-info,
-.woocommerce-message {
-	a {
-		margin-left: auto;
-	}
-
-	&:before {
-		font-family: 'WooCommerce';
-		content: "\e028";
-		color: #fff;
-	    display: inline-flex;
-	    margin-right: 10px;
-	}
-}
-
-.woocommerce-error {
-	li:before {
-		font-family: 'WooCommerce';
-		content: "\e028";
-		color: #fff;
-		display: inline-flex;
-		margin-right: 10px;
-		content: "\e016";
-	}
-}
-
 
 .woocommerce-info {
-	display: flex;
-	align-items: center;
-	flex-wrap: wrap;
 	width: 100%;
 
-	a {
+	a.button {
+		@media (max-width: 600px) {
+			display: none;
+		}
 		order: 2;
 		margin-left: auto;
 	}
+
 	input[type="submit"] {
 		padding: 0 5px;
 		margin-left: 5px;
-	}
-}
-
-.woocommerce-message {
-	&:before {
-		content: "\e015";
 	}
 }
 
@@ -515,32 +515,36 @@ body{
 	}
 }
 
-.woocommerce-message {
-	clear: both;
-
-	@media (max-width: 600px) {
-		flex-direction: column;
-		align-items: flex-start;
-
-		a {
-			margin-top: 15px;
-		}
-	}
-}
-
 .woocommerce-error {
 	background-color: firebrick;
 	flex-direction: column;
 	align-items: flex-start;
 
 	li {
-		display: inline-flex;
 		width: 100%;
 
+		@media (min-width: 601px) {
+			display: flex;
+			align-items: center;
+		}
+
+		&:before {
+			font-family: 'WooCommerce';
+			color: #fff;
+			margin-right: 10px;
+			content: "\e016";
+		}
+
 		a {
-			float: right;
+			display: none;
+			order: 2;
+			margin-left: auto;
 			color: #ffffff;
 			text-decoration: underline;
+
+			@media (min-width: 601px) {
+				display: block;
+			}
 		}
 
 		@media (max-width: 600px) {
