--- a/assets/css/sass/base/layout/sidebar-menu.scss
+++ b/assets/css/sass/base/layout/sidebar-menu.scss
@@ -171,9 +171,38 @@
 		}
 	}
 
+	.mobile-nav-tab {
+		padding: 0;
+		margin: 0;
+		display: flex;
+
+		li {
+			width: 50%;
+			text-align: center;
+		}
+	}
+
 	// menu
 	.site-navigation {
 		margin-bottom: 40px;
+
+		&.has-nav-tab {
+			.main-navigation, .categories-navigation {
+				display: none;
+			}
+
+			.main-navigation {
+				&.active {
+					display: block;
+				}
+			}
+
+			.categories-navigation {
+				&.active {
+					display: block;
+				}
+			}
+		}
 	}
 
 	@media ( min-width: $screen-md ) {
