--- a/style.css
+++ b/style.css
@@ -4159,8 +4159,31 @@ article p:last-child {
   height: 40px;
 }
 
+.sidebar-menu .mobile-nav-tab {
+  padding: 0;
+  margin: 0;
+  display: flex;
+}
+
+.sidebar-menu .mobile-nav-tab li {
+  width: 50%;
+  text-align: center;
+}
+
 .sidebar-menu .site-navigation {
   margin-bottom: 40px;
+}
+
+.sidebar-menu .site-navigation.has-nav-tab .main-navigation, .sidebar-menu .site-navigation.has-nav-tab .categories-navigation {
+  display: none;
+}
+
+.sidebar-menu .site-navigation.has-nav-tab .main-navigation.active {
+  display: block;
+}
+
+.sidebar-menu .site-navigation.has-nav-tab .categories-navigation.active {
+  display: block;
 }
 
 @media (min-width: 992px) {
