fix style notice checkout page

--- a/assets/css/sass/woocommerce/checkout-page.scss
+++ b/assets/css/sass/woocommerce/checkout-page.scss
@@ -1782,3 +1782,13 @@
 		}
 	}
 }
+
+.woocommerce-NoticeGroup-checkout {
+	.woocommerce-error {
+		li {
+			strong {
+				margin-right: 5px;
+			}
+		}
+	}
+}
