--- a/style.css
+++ b/style.css
@@ -10468,11 +10468,11 @@ body:not(.yith-wcms-pro) .processing:not(.um-woo-status):after {
   padding: 0 1em;
 }
 
-.checkout-layout-3:not(.woobuilder-active) .form-row {
+.checkout-layout-3:not(.woobuilder-active) .form-row:not(.field-readonly) {
   position: relative;
 }
 
-.checkout-layout-3:not(.woobuilder-active) .form-row label:not(.checkbox) {
+.checkout-layout-3:not(.woobuilder-active) .form-row:not(.field-readonly) label:not(.checkbox) {
   position: absolute;
   top: 50%;
   left: 12px;
@@ -10484,60 +10484,60 @@ body:not(.yith-wcms-pro) .processing:not(.um-woo-status):after {
   line-height: 36px;
 }
 
-.checkout-layout-3:not(.woobuilder-active) .form-row:not(.no-label) .input-text {
+.checkout-layout-3:not(.woobuilder-active) .form-row:not(.field-readonly):not(.no-label) .input-text {
   width: 100%;
   height: 50px;
   padding: 20px 12px 2px;
   border-radius: 4px;
 }
 
-.checkout-layout-3:not(.woobuilder-active) .form-row .input-text {
+.checkout-layout-3:not(.woobuilder-active) .form-row:not(.field-readonly) .input-text {
   width: 100%;
   height: 50px;
   border-radius: 4px;
 }
 
-.checkout-layout-3:not(.woobuilder-active) .form-row .input-text:focus {
+.checkout-layout-3:not(.woobuilder-active) .form-row:not(.field-readonly) .input-text:focus {
   border-color: #000;
 }
 
-.checkout-layout-3:not(.woobuilder-active) .form-row.woocommerce-invalid-required-field .input-text, .checkout-layout-3:not(.woobuilder-active) .form-row.woocommerce-invalid-required-field .select2-selection, .checkout-layout-3:not(.woobuilder-active) .form-row.woocommerce-invalid .input-text, .checkout-layout-3:not(.woobuilder-active) .form-row.woocommerce-invalid .select2-selection {
+.checkout-layout-3:not(.woobuilder-active) .form-row:not(.field-readonly).woocommerce-invalid-required-field .input-text, .checkout-layout-3:not(.woobuilder-active) .form-row:not(.field-readonly).woocommerce-invalid-required-field .select2-selection, .checkout-layout-3:not(.woobuilder-active) .form-row:not(.field-readonly).woocommerce-invalid .input-text, .checkout-layout-3:not(.woobuilder-active) .form-row:not(.field-readonly).woocommerce-invalid .select2-selection {
   border-color: #d50000;
 }
 
-.checkout-layout-3:not(.woobuilder-active) .form-row.notes label {
+.checkout-layout-3:not(.woobuilder-active) .form-row:not(.field-readonly).notes label {
   top: 25px;
 }
 
-.checkout-layout-3:not(.woobuilder-active) .form-row.notes textarea {
+.checkout-layout-3:not(.woobuilder-active) .form-row:not(.field-readonly).notes textarea {
   padding: 20px 12px 12px !important;
 }
 
 @media (max-width: 991px) {
-  .checkout-layout-3:not(.woobuilder-active) .form-row.notes textarea::-webkit-input-placeholder {
+  .checkout-layout-3:not(.woobuilder-active) .form-row:not(.field-readonly).notes textarea::-webkit-input-placeholder {
     color: transparent;
   }
-  .checkout-layout-3:not(.woobuilder-active) .form-row.notes textarea:-moz-placeholder {
+  .checkout-layout-3:not(.woobuilder-active) .form-row:not(.field-readonly).notes textarea:-moz-placeholder {
     /* Firefox 18- */
     color: transparent;
   }
-  .checkout-layout-3:not(.woobuilder-active) .form-row.notes textarea::-moz-placeholder {
+  .checkout-layout-3:not(.woobuilder-active) .form-row:not(.field-readonly).notes textarea::-moz-placeholder {
     /* Firefox 19+ */
     color: transparent;
   }
-  .checkout-layout-3:not(.woobuilder-active) .form-row.notes textarea:-ms-input-placeholder {
+  .checkout-layout-3:not(.woobuilder-active) .form-row:not(.field-readonly).notes textarea:-ms-input-placeholder {
     color: transparent;
   }
 }
 
-.checkout-layout-3:not(.woobuilder-active) .form-row.w-anim-wrap label {
+.checkout-layout-3:not(.woobuilder-active) .form-row:not(.field-readonly).w-anim-wrap label {
   top: 15px;
   font-size: 12px;
   line-height: 18px;
   padding: 0;
 }
 
-.checkout-layout-3:not(.woobuilder-active) .form-row#billing_country_field label, .checkout-layout-3:not(.woobuilder-active) .form-row#billing_state_field label {
+.checkout-layout-3:not(.woobuilder-active) .form-row:not(.field-readonly)#billing_country_field label, .checkout-layout-3:not(.woobuilder-active) .form-row:not(.field-readonly)#billing_state_field label, .checkout-layout-3:not(.woobuilder-active) .form-row:not(.field-readonly)#billing_city_field label, .checkout-layout-3:not(.woobuilder-active) .form-row:not(.field-readonly)#shipping_country_field label, .checkout-layout-3:not(.woobuilder-active) .form-row:not(.field-readonly)#shipping_state_field label, .checkout-layout-3:not(.woobuilder-active) .form-row:not(.field-readonly)#shipping_city_field label {
   font-size: 12px;
   line-height: 1;
   padding: 0;
@@ -10548,11 +10548,11 @@ body:not(.yith-wcms-pro) .processing:not(.um-woo-status):after {
   background: transparent;
 }
 
-.checkout-layout-3:not(.woobuilder-active) .form-row#billing_country_field .select2-selection, .checkout-layout-3:not(.woobuilder-active) .form-row#billing_state_field .select2-selection {
+.checkout-layout-3:not(.woobuilder-active) .form-row:not(.field-readonly)#billing_country_field .select2-selection, .checkout-layout-3:not(.woobuilder-active) .form-row:not(.field-readonly)#billing_state_field .select2-selection, .checkout-layout-3:not(.woobuilder-active) .form-row:not(.field-readonly)#billing_city_field .select2-selection, .checkout-layout-3:not(.woobuilder-active) .form-row:not(.field-readonly)#shipping_country_field .select2-selection, .checkout-layout-3:not(.woobuilder-active) .form-row:not(.field-readonly)#shipping_state_field .select2-selection, .checkout-layout-3:not(.woobuilder-active) .form-row:not(.field-readonly)#shipping_city_field .select2-selection {
   border-radius: 4px;
 }
 
-.checkout-layout-3:not(.woobuilder-active) .form-row#billing_country_field .select2-selection__rendered, .checkout-layout-3:not(.woobuilder-active) .form-row#billing_state_field .select2-selection__rendered {
+.checkout-layout-3:not(.woobuilder-active) .form-row:not(.field-readonly)#billing_country_field .select2-selection__rendered, .checkout-layout-3:not(.woobuilder-active) .form-row:not(.field-readonly)#billing_state_field .select2-selection__rendered, .checkout-layout-3:not(.woobuilder-active) .form-row:not(.field-readonly)#billing_city_field .select2-selection__rendered, .checkout-layout-3:not(.woobuilder-active) .form-row:not(.field-readonly)#shipping_country_field .select2-selection__rendered, .checkout-layout-3:not(.woobuilder-active) .form-row:not(.field-readonly)#shipping_state_field .select2-selection__rendered, .checkout-layout-3:not(.woobuilder-active) .form-row:not(.field-readonly)#shipping_city_field .select2-selection__rendered {
   padding: 23px 12px 2px;
   line-height: 1.5;
   min-height: 48px;
